# pyxc-llvm-tutorial

./: .gitignore  CHAPTER_ROADMAP.md  README.md  REF.md  ROADMAP.md  TARGET-AUDIENCE.md  _CLAUDE._md  chapter-00.md  chapter-01-todo.md  chapter-01.md  chapter-02-todo.md  chapter-02.md  chapter-03.md  chapter-04-todo.md  chapter-04.md  chapter-05-todo.md  chapter-05.md  chapter-06.md  chapter-07-todo.md  chapter-07.md  chapter-08.md  chapter-09.md  chapter-10-todo.md  chapter-10.md  chapter-10.txt  chapter-11.md  chapter-12.md  chapter-13.md  chapter-14.md  chapter-15.md  chapter-16.md  chapter-17.md  chapter-18.md  chapter-19.md  chapter-20.md  chapter-21.md  chapter-22.md  chapter-23.md  chapter-24.md  chapter-25.md  (+7 more)
.hidden/: chapter-11.md  chapter-12.md  chapter-13.md  chapter-14.md  chapter-15.md  chapter-16.md  chapter-17.md  chapter-18.md  chapter-19.md  chapter-20.md  chapter-21.md  chapter-22.md  chapter-23.md  chapter-24.md  chapter-25.md  chapter-26.md  chapter-27.md  chapter-28.md  chapter-29.md  chapter-30.md  chapter-31.md  chapter-32.md
book/: chapter-01-exercises.md  chapter-01.md  chapter-02.md  chapter-03.md
chapter-01/: chapter-01.md
chapter-01/code/: FEATURE_SCOPE.md
chapter-02/: FEATURE_SCOPE.md  chapter-02.md
chapter-02/code/: pyxc.cpp  pyxc.ebnf
chapter-04/: chapter-04.md
chapter-04/code/: pyxc.cpp
code/: test.sh
code/bench/: bench.sh  fib.c  fib.cpp  fib.pyxc  fib.rs  fib_c  fib_clang.ll  fib_clang_fib.ll  fib_cpp  fib_py.py  fib_pyxc  fib_pyxc.ll  fib_pyxc.pyxc  fib_pyxc_fib.ll  fib_rs  mandel.c  mandel.cpp  mandel.rs  mandel_c  mandel_cpp  mandel_py.py  mandel_pyxc  mandel_pyxc.pyxc  (+1 more)
code/chapter-02/: CMakeLists.txt  pyxc.cpp  pyxc.ebnf
code/chapter-02/.cache/clangd/index/: pyxc.cpp.7F2F0CECBCEAA9FD.idx
code/chapter-02/docs/: chapter-02-feature-scope.md
code/chapter-02/test/: c02_def_simple.pyxc  c02_extern_multi.pyxc  c02_extern_simple.pyxc  c02_identifier_simple.pyxc  c02_parse_error.pyxc  c02_top_expr.pyxc  call_expr_arg.pyxc  call_multi_args.pyxc  call_nested.pyxc  call_one_arg.pyxc  call_simple.pyxc  comment_full_line.pyxc  comment_inline.pyxc  def_multiarg.pyxc  definition_inline.pyxc  error_bad_call_args.pyxc  error_call_bad_separator.pyxc  error_definition_missing_colon.pyxc  error_definition_missing_colon_eol.pyxc  error_definition_missing_return.pyxc  error_extern_missing_def.pyxc  error_missing_colon.pyxc  error_missing_paren_close.pyxc  error_missing_return.pyxc  error_paren_missing_close.pyxc  error_prototype_bad_param_separator.pyxc  error_prototype_missing_name.pyxc  error_prototype_missing_paren_close.pyxc  error_prototype_missing_paren_open.pyxc  error_unexpected_token.pyxc  error_unknown_token_in_expr.pyxc  expr_basic_arithmetic.pyxc  expr_comparison.pyxc  expr_left_associativity.pyxc  expr_operators.pyxc  expr_parentheses.pyxc  extern_one_arg.pyxc  extern_zero_args.pyxc  number_float.pyxc  number_integer.pyxc  (+5 more)
code/chapter-04/: CMakeLists.txt  pyxc.cpp  pyxc.ebnf
code/chapter-04/docs/: chapter-04-whatchanged.md
code/chapter-04/test/: c01_token_invalid_number.pyxc  c02_call_in_expr.pyxc  c02_call_nested.pyxc  c02_comment_full_line.pyxc  c02_comment_inline.pyxc  c02_def_multiarg.pyxc  c02_def_multiline.pyxc  c02_error_extern_missing_def.pyxc  c02_error_missing_colon.pyxc  c02_error_unexpected_token.pyxc  c02_expr_precedence.pyxc  c04_cli_build_invalid_opt_level.pyxc  c04_cli_repl_emit_llvm_ir_stub.pyxc  c04_cli_repl_emit_tokens.pyxc  c04_cli_run_emit_llvm_ir_stub.pyxc  c04_cli_run_too_many_files.pyxc
code/chapter-05/: CMakeLists.txt  pyxc.cpp
code/chapter-05/.cache/clangd/index/: pyxc.cpp.321DC8AE48C204E2.idx
code/chapter-05/test/: anon_expr_erased.pyxc  binop_add.pyxc  binop_lt.pyxc  binop_mul.pyxc  binop_sub.pyxc  call_known_function.pyxc  error_arg_count_mismatch.pyxc  error_unknown_function.pyxc  error_unknown_variable.pyxc  extern_declare.pyxc  extern_then_call.pyxc  function_body_error_erases.pyxc  function_entry_block.pyxc  function_named_values_cleared.pyxc  multi_instruction_body.pyxc  number_constant.pyxc  number_constant_folding.pyxc  prototype_arg_names.pyxc  prototype_return_type.pyxc  variable_param.pyxc
code/chapter12/: .env  CMakeLists.txt  build.sh  changes.cpp  pyxc  pyxc.cpp  pyxc.ebnf  pyxc_indent.cpp  temp.py  test.pyxc  test_indent.pyxc
code/chapter12/test/: .lit_test_times.txt  block_semicolon_return.pyxc  error_bare_bang.pyxc  error_bare_equal.pyxc  ir_operator_ge.pyxc  lit.cfg.py  location_error.pyxc  repl_if_factorial.pyxc
code/chapter12/test/Output/: location_error.pyxc.script  object_output_flag.pyxc.script
code/chapter12/tests/: bad_if_else_mismatch.pyxc  bad_mixed_tabs_spaces.pyxc  for_if_for.pyxc  for_if_for_if.pyxc  if_for_if_for.pyxc  run_indent_suite.sh
code/chapter29/: CMakeLists.txt  DESIGN_REQUIREMENTS.md  pyxc.ebnf
code/chapter29/test/: array_error_non_integer_index.pyxc  break_outside_loop.pyxc  c25_mod_add.pyxc  c_addr_of_array_elem.pyxc  c_bug_and_or_returns_float.pyxc  c_do_while_break.pyxc  c_elif_chain.pyxc  c_malloc_free_struct.pyxc  c_nested_loops.pyxc  c_type_alias_usage.pyxc  c_void_function.pyxc  file_error_fclose_non_pointer.pyxc  io_printf_subset.pyxc  multifile_executable_link.pyxc  struct_alias_type.pyxc  struct_error_nonstruct_member.pyxc
docs/: authoring-spec.md  chapter-00.md  chapter-01.md  chapter-02-whatchanged.md  chapter-02.md  chapter-03.md  chapter-04.md  chapter-05.md  chapter-06.md  chapter-06o.md  chapter-07.md  chapter-08.md  chapter-09.md  chapter-10.md  chapter-11.md  chapter-11p.md  chapter-12.md  chapter-13.md  chapter-14.md  chapter-15.md  chapter-16.md
memory/: MEMORY.md
old_chapters/: chapter-08.md  chapter-09.md  chapter-11.md  chapter-12.md  chapter-13.md  chapter-17.md  chapter-19.md
selfhost/: BUILD_MAC.md  CMakeLists.txt  Makefile.old  PHASE0_COMPLETE.md  PHASE1_PROGRESS.md  README.md  SELFHOSTING.md  STATUS.md  ast.pyxc  build.sh  build_ast.sh  build_lexer.sh  build_parser.sh  file_utils.c  lexer.pyxc  lexer_test  llvm_bridge.cpp  llvm_bridge.h  parser.pyxc  string_utils.c  test_ast.pyxc  test_bridge.c
(+2080 files in other folders)
